March 2018 6.3
  - Server profile: added option if referential integrity overlay is active to skip cleanup actions
  - LAM Pro:
   -> Support custom structural object classes with new custom type
   -> Support dynamic lists


04.02.2018 6.2.1
  - Fixed bugs:
   -> Login page not working when no server profile exists (44)
   -> LAM Pro: Password Self Reset has issues when both security question and confirmation mail are activated.
   -> LAM main configuration: certificate buttons do not work


13.12.2017 6.2
  - License changed from GPL v2 to GPL v3
  - PHP 5.6 and Internet Explorer 11 or later required
  - PDF export supports Chinese, Japan and Korean
  - Account status also shows expired accounts
  - Quota: support k/m/g/t/K/M/G/T to specify values in e.g. kB
  - LAM Pro:
   -> Cron jobs include better logging and support dry-run


19.09.2017 6.1
  - Automatically trim input fields to avoid trailing/leading spaces
  - LAM Pro:
   -> Custom fields: support wildcards in text fields such as $firstname
   -> Custom fields: specify minimum/maximum count for multi-value entries
   -> Custom fields: new type for constant values
  - Fixed bugs:
   -> Password modify page reports error on password change when posixAccount is present for users
   -> Nginx configuration files did not include "fastcgi_param SCRIPT_FILENAME $request_filename;" (193)


20.07.2017 6.0.1
  - Fixed bugs:
   -> Configuration file fills up with empty values
   -> Tool visibility settings


26.06.2017 6.0
  - Support multiple configurations for same account type
  - PHP 7.1 compatibility
  - Courier users and mail aliases
  - Windows: Support unlocking of users with too many failed login attempts
  - Samba 3: added account expiration date to PDF fields
  - LAM Pro:
   -> Custom fields: can be used for file upload
   -> Custom fields: new selection list type that gets options from LDAP search
   -> Kopano support


15.03.2017 5.7